swapped v and h binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,6 @@ bind-key C-a last-window
 bind-key a send-prefix
 
 bind r source-file ~/.tmux.conf
-bind h split-window -h
-bind v split-window -v
+bind v split-window -h
+bind h split-window -v
 unbind %
