--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,13 @@
 set-option -g default-shell $SHELL
 
+# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
 set -g status-bg black
 set -g status-fg white
 setw -g window-status-current-fg green
