--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 set-option -g default-shell $SHELL
 
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+if-shell 'test "$(uname)" = "Darwin"' "set-option -g default-command 'reattach-to-user-namespace -l $SHELL'"
 
 set -g status-bg black
 set -g status-fg white
