--- a/config/git/config
+++ b/config/git/config
@@ -35,7 +35,7 @@
     sl = stash list
     sp = stash pop
     ss = stash save
-    track = !git checkout --track -b $1 origin/$1 && echo
+    track = "!f() { local b=$1; local remote=${2:-origin}; git checkout --track -b $b $remote/$b; }; f"
     unrm = !git checkout HEAD
     unstage = reset
     which = name-rev --name-only
