--- a/config/ruby/rubocop.yml
+++ b/config/ruby/rubocop.yml
@@ -144,6 +144,9 @@ Style/CommentAnnotation:
 Style/Documentation:
   Enabled: false
 
+Style/DoubleNegation:
+  Enabled: false
+
 Style/EmptyLineBetweenDefs:
   AllowAdjacentOneLineDefs: true
 
