--- a/config/ruby/rubocop.yml
+++ b/config/ruby/rubocop.yml
@@ -1,8 +1,3 @@
-AllCops:
-  # By default, the rails cops are not run. Override in project or home
-  # directory .rubocop.yml files, or by giving the -R/--rails option.
-  RunRailsCops: true
-
 # Align the elements of a hash literal if they span more than one line.
 Style/AlignHash:
   # Alignment of entries using hash rocket as separator. Valid values are:
@@ -57,16 +52,13 @@ Style/AlignHash:
   EnforcedLastArgumentHashStyle: ignore_implicit
 
 Style/AlignParameters:
-  EnforcedStyle: with_fixed_parameter
+  EnforcedStyle: with_fixed_indentation
 
 Style/AndOr:
   Enabled: false
 
 Style/BarePercentLiterals:
   EnforcedStyle: percent_q
-
-Style/Blocks:
-  Enabled: false
 
 Style/BracesAroundHashParameters:
   EnforcedStyle: no_braces
@@ -367,7 +359,7 @@ Style/SpaceAroundEqualsInParameterDefault:
     - no_space
 
 Style/SpaceAroundOperators:
-  MultiSpaceAllowedForOperators:
+  AllowForAlignment:
     - '='
     - '=>'
 
@@ -406,7 +398,10 @@ Style/TrailingBlankLines:
     - final_newline
     - final_blank_line
 
-Style/TrailingComma:
+Style/TrailingCommaInLiteral:
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: comma
 
 # TrivialAccessors doesn't require exact name matches and doesn't allow
@@ -524,6 +519,9 @@ Lint/DefEndAlignment:
 
 ##################### Rails ##################################
 
+Rails:
+  Enabled: true
+
 Rails/ActionFilter:
   EnforcedStyle: action
   SupportedStyles:
@@ -531,10 +529,6 @@ Rails/ActionFilter:
     - filter
   Include:
     - app/controllers/**/*.rb
-
-Rails/DefaultScope:
-  Include:
-    - app/models/**/*.rb
 
 Rails/HasAndBelongsToMany:
   Include:
