--- a/config/ruby/rubocop.yml
+++ b/config/ruby/rubocop.yml
@@ -82,7 +82,7 @@ Style/BracesAroundHashParameters:
 
 # Indentation of `when`.
 Style/CaseIndentation:
-  IndentWhenRelativeTo: case
+  EnforcedStyle: case
   SupportedStyles:
     - case
     - end
@@ -274,6 +274,9 @@ Style/MethodName:
     - snake_case
     - camelCase
 
+Style/MultilineMethodCallIndentation:
+  EnforcedStyle: indented
+
 Style/MultilineOperationIndentation:
   EnforcedStyle: indented
 
@@ -398,6 +401,9 @@ Style/SymbolProc:
   IgnoredMethods:
     - respond_to
 
+Style/TernaryParentheses:
+  EnforcedStyle: require_parentheses
+
 Style/TrailingBlankLines:
   EnforcedStyle: final_newline
   SupportedStyles:
@@ -505,7 +511,7 @@ Lint/EndAlignment:
   # The value `variable` means that in assignments, `end` should be aligned
   # with the start of the variable on the left hand side of `=`. In all other
   # situations, `end` should still be aligned with the keyword.
-  AlignWith: keyword
+  EnforcedStyleAlignWith: keyword
   SupportedStyles:
     - keyword
     - variable
@@ -515,7 +521,7 @@ Lint/DefEndAlignment:
   # The value `start_of_line` means that `end` should be aligned with method
   # calls like `private`, `public`, etc, if present in front of the `def`
   # keyword on the same line.
-  AlignWith: start_of_line
+  EnforcedStyleAlignWith: start_of_line
   SupportedStyles:
     - start_of_line
     - def
