Add `git ps` alias for pulling submodules too

--- a/config/git/config
+++ b/config/git/config
@@ -46,6 +46,7 @@
     pr = "!f() { local repo=\"$(git remote -v | grep origin | grep push | cut -d ':' -f 2 | cut -d '.' -f 1)\"; \
       local b=\"$(git symbolic-ref --short HEAD)\"; \
       open \"https://github.com/$repo/compare/$b?expand=1\"; }; f"
+    ps = pull --recurse-submodules
     r = rebase
     ra = rebase --abort
     rc = rebase --continue
