--- a/config/termite/config
+++ b/config/termite/config
@@ -1,26 +1,33 @@
 [options]
 font = Inconsolata 12
 
-# https://github.com/alpha-omega/termite-colors-solarized
-
+# Ashes (dark)
 [colors]
-foreground = #839496
-foreground_bold = #eee8d5
-background = #002b36
-cursor  = #93a1a1
-color0  = #073642
-color1  = #dc322f
-color2  = #859900
-color3  = #b58900
-color4  = #268bd2
-color5  = #d33682
-color6  = #2aa198
-color7  = #eee8d5
-color8  = #002b36
-color9  = #cb4b16
-color10 = #586e75
-color11 = #657b83
-color12 = #839496
-color13 = #6c71c4
-color14 = #93a1a1
-color15 = #fdf6e3
+foreground      = #c7ccd1
+foreground_bold = #f8f8ff
+cursor          = #c7ccd1 
+background      = #1c2023
+# black
+color0  = #1c2023
+color8  = #747c84
+# red
+color1  = #c7ae95
+color9  = #c7ae95
+# green
+color2  = #95c7ae
+color10 = #75a79e
+# yellow
+color3  = #aec795
+color11 = #8ea785
+# blue
+color4  = #ae95c7
+color12 = #8e75b7
+# magenta
+color5  = #c795ae
+color13 = #c795ae
+# cyan
+color6  = #95aec7
+color14 = #95aec7
+# white
+color7  = #c7ccd1
+color15 = #f3f4f5
