Adjust terminal colors

--- a/config/termite/config
+++ b/config/termite/config
@@ -12,7 +12,7 @@ color0  = #1c2023
 color8  = #747c84
 # red
 color1  = #c7ae95
-color9  = #c7ae95
+color9  = #a78e85
 # green
 color2  = #95c7ae
 color10 = #75a79e
@@ -24,10 +24,10 @@ color4  = #ae95c7
 color12 = #8e75b7
 # magenta
 color5  = #c795ae
-color13 = #c795ae
+color13 = #a7759e
 # cyan
 color6  = #95aec7
-color14 = #95aec7
+color14 = #758ea7
 # white
 color7  = #c7ccd1
 color15 = #f3f4f5
