--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,2 +1,17 @@
 [Settings]
+gtk-button-images = 1
+gtk-cursor-theme-name = Adwaita
+gtk-cursor-theme-size = 0
+gtk-enable-event-sounds = 1
+gtk-enable-input-feedback-sounds = 0
+gtk-font-name = DejaVu Sans Condensed 10
+gtk-icon-theme-name = Adwaita
 gtk-key-theme-name = Emacs
+gtk-menu-images = 1
+gtk-theme-name = Xfce
+gtk-toolbar-icon-size = GTK_ICON_SIZE_SMALL_TOOLBAR
+gtk-toolbar-style = GTK_TOOLBAR_BOTH_HORIZ
+gtk-xft-antialias = 1
+gtk-xft-hinting = 1
+gtk-xft-hintstyle = hintslight
+gtk-xft-rgba = none
