--- a/config/nix/nix.conf
+++ b/config/nix/nix.conf
@@ -5,5 +5,8 @@ experimental-features = nix-command ca-references flakes
 substituters              = https://cache.nixos.org
 trusted-public-keys       = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY=
 
+extra-substituters        = https://cydparser.cachix.org
+extra-trusted-public-keys = cydparser.cachix.org-1:ExlM2Ou77dIHjm/ifAECj5NTbtVGbiNZtaS/dk3AUIc=
+
 extra-substituters        = https://hydra.iohk.io
 extra-trusted-public-keys = hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ=
