Fix Iosevka config

--- a/config/nixpkgs/home/iosevka-haskell.toml
+++ b/config/nixpkgs/home/iosevka-haskell.toml
@@ -12,7 +12,7 @@ j = "serifless"
 l = "zshaped"
 m = "short-leg"
 t = "flat-hook-short-neck"
-capital-gamma = "motion-serifed"
+capital-gamma = "serifed"
 latn-epsilon = "serifed"
 latn-reverse-epsilon = "serifed"
 lower-iota = "serifed-tailed"
