Enable allow-import-from-derivation

--- a/config/nix/nix.conf
+++ b/config/nix/nix.conf
@@ -1,5 +1,7 @@
 experimental-features = nix-command ca-references flakes
 
+allow-import-from-derivation = true
+
 # Binary Caches
 
 substituters              = https://cache.nixos.org
