Remove ca-references

--- a/config/nix/nix.conf
+++ b/config/nix/nix.conf
@@ -1,4 +1,4 @@
-experimental-features = nix-command ca-references flakes
+experimental-features = nix-command flakes
 
 allow-import-from-derivation = true
 
