--- a/config/nix/nix.conf
+++ b/config/nix/nix.conf
@@ -10,5 +10,8 @@ trusted-public-keys       = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQF
 extra-substituters        = https://cydparser.cachix.org
 extra-trusted-public-keys = cydparser.cachix.org-1:ExlM2Ou77dIHjm/ifAECj5NTbtVGbiNZtaS/dk3AUIc=
 
+extra-substituters        = https://ghc-nix.cachix.org
+extra-trusted-public-keys = ghc-nix.cachix.org-1:wI8l3tirheIpjRnr2OZh6YXXNdK2fVQeOI4SVz/X8nA=
+
 extra-substituters        = https://hydra.iohk.io
 extra-trusted-public-keys = hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ=
