--- a/config/nix/nix.conf
+++ b/config/nix/nix.conf
@@ -15,3 +15,6 @@ extra-trusted-public-keys = ghc-nix.cachix.org-1:wI8l3tirheIpjRnr2OZh6YXXNdK2fVQ
 
 extra-substituters        = https://cache.iog.io
 extra-trusted-public-keys = hydra.iohk.io:f/Ea+s+dFdN+3Y/G+FDgSq+a5NEWhJGzdjvKNGv0/EQ=
+
+extra-substituters        = https://nix-community.cachix.org
+extra-trusted-public-keys = nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
