Switch to Inconsolata

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -1,10 +1,7 @@
 window:
   decorations: none
 
-scrolling:
-  history: 4096
-
 font:
   normal:
-    family: Iosevka Term
+    family: Inconsolata
   size: 14.0
